[package]
name = "blindbitd"
version = "0.0.1"
authors = ["pythcoiner"]
description = "Utility to run a blindbit-oracle server in integration tests"
repository = "https://github.com/pythcoiner/blindbitdd"
license = "MIT"
edition = "2021"
categories = ["development-tools::testing"]

[dependencies]
temp-dir = "0.1.14"
nix = {version = "0.29.0", features = ["signal"]}
corepc-node = { git = "https://github.com/rust-bitcoin/corepc/", features = ["download"] }

