[package]
name = "blindbitd"
version = "0.0.1"
authors = ["pythcoiner"]
description = "Utility to run a blindbit-oracle server in integration tests"
repository = "https://github.com/pythcoiner/blindbitdd"
documentation = "https://docs.rs/blindbitd"
license-file = "LICENSE"
edition = "2021"
categories = ["development-tools::testing"]

[dependencies]
temp-dir = "0.1.14"
nix = {version = "0.29.0", features = ["signal"]}
corepc-node = { version = "0.10.0" , features = ["download", "29_0"] }

